# libBMpp

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: Makefile.am  bmp.hpp  bmp16.hpp  bmp24.hpp  bmp32.hpp  bmp8.hpp  bmpmonochrome.hpp
include/params/: Makefile.am  bmpparams.hpp
include/parser/: Makefile.am  bmpparser.hpp
include/pixels/: Makefile.am  bwpixel.hpp  bytepixel.hpp  pixel.hpp  rgbapixel.hpp  rgbpixel.hpp  wordpixel.hpp
src/: Makefile.am  bmp.cpp  bmp16.cpp  bmp24.cpp  bmp32.cpp  bmp8.cpp  bmpmonochrome.cpp
src/parser/: bmpparser.cpp
src/pixels/: bwpixel.cpp  bytepixel.cpp  rgbapixel.cpp  rgbpixel.cpp  wordpixel.cpp
test/: Makefile.am  build.debug.sh  main.cpp  main_bmp24.cpp  main_bmp32.cpp  main_bmp8.cpp  main_monochrome.cpp
test/bmp16/: Makefile.am  bmp16.cpp
test/bmp24/: Makefile.am  bmp24.cpp
test/bmp32/: Makefile.am  bmp32.cpp
test/bmp8/: Makefile.am  bmp8.cpp
test/bmpmono/: Makefile.am  bmpmono.cpp
test/complex/: Makefile.am  complex  complex.cpp
