# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = bmp24.hpp params/bmpparams.hpp pixels/pixel.hpp pixels/wordpixel.hpp pixels/bytepixel.hpp pixels/bwpixel.hpp pixels/rgbpixel.hpp pixels/rgbapixel.hpp parser/bmpparser.hpp bmp8.hpp bmp16.hpp bmp32.hpp bmp.hpp bmpmonochrome.hpp
