LIBS = 
INCLUDE = ../include/
AM_CXXFLAGS = -Wall -std=c++11 -I ${INCLUDE}

lib_LTLIBRARIES = libbmpp.la
libbmpp_la_SOURCES = bmp.cpp bmp24.cpp bmp32.cpp bmp16.cpp bmpmonochrome.cpp bmp8.cpp pixels/rgbpixel.cpp pixels/bytepixel.cpp pixels/rgbapixel.cpp pixels/wordpixel.cpp pixels/bwpixel.cpp 
libbmpp_la_LDFLAGS = -version-info 1:0:0
